# Blezer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN_PRINCIPLES.md  Info.plist  README.md  README.zh.md  build.rs
.claude/: launch.json
scripts/: package.sh
src/: app.rs  config.rs  main.rs  model.rs
src/ble/: mod.rs  parse.rs  scanner.rs
src/db/: mod.rs
src/web/: dashboard.html  mod.rs
